--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                   <p class="startEnd">Finished on Jun 2022</p>
                   <i class="fas fa-arrow-circle-down itemEdu"></i>
                   <!-- <i class="fas fa-arrow-circle-down itemEdu"></i> -->
-                  <p class="startEnd">Started on Jul 2016</p>
+                  <p class="startEnd">Started on 2024</p>
                   <button
                     type="button"
                     class="btn btn-danger itemEdu"
